<resources>
    <string name="app_name">BTL_QuanLyTrungTamDayThem</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="demo">DEMO</string>
    <string name="logo">LOGO</string>
    <string name="email">Email</string>
    <string name="title">Quản lý trung tâm dạy thêm</string>
    <string name="account">Tên đặt nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="settings">Cài đặt</string>
    <string name="course">Lớp học</string>
    <string name="home">Trang chủ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="admin_email">admin@gmail.com</string>
    <string name="account2">Tài khoản</string>
    <string name="version">Phiên bản 1.0.0</string>
    <string name="info">Thông tin cá nhân</string>
    <string name="logout">Đăng xuất</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="add">Thêm</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="lop_hoc">Lớp học</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="name_course">Tên khóa học</string>
    <string name="course_name">Tên khóa học</string>
    <string name="description">Mô tả</string>
    <string name="time_start_end">Thời gian bắt đầu - kết thúc</string>
    <string name="status">Trạng thái</string>
    <string name="students">Sinh viên tham gia</string>
    <string name="tien_do_hoc">Tiến độ học</string>
    <string name="instructor">Giảng viên:</string>
    <string name="search">Tìm kiếm</string>

</resources>