<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.androidpro.BTL_QuanLyTrungTamDayThem.Views.Fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_course"
        android:name="com.androidpro.BTL_QuanLyTrungTamDayThem.Views.Fragments.CourseFragment"
        android:label="@string/course"
        tools:layout="@layout/fragment_course" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.androidpro.BTL_QuanLyTrungTamDayThem.Views.Fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
