<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/school_24"
            android:contentDescription="@string/course"
            android:layout_marginEnd="16dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCourseName"
                android:text="@string/course_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="?attr/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="14sp"
                tools:text="10/1/2025 - 2/2/2025" />


            <LinearLayout
                android:id="@+id/llProgressContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tvProgressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tien_do_hoc"
                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:layout_marginTop="4dp"
                    android:max="100"
                    tools:progress="75" />
            </LinearLayout>
        </LinearLayout>

        <!-- Icon next -->
        <com.google.android.material.chip.Chip
            android:id="@+id/tvStatusBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            android:text="Sắp"
            app:chipMinHeight="28dp"
            app:chipCornerRadius="16dp"
            app:chipIconVisible="false"
            app:checkedIconVisible="false"
            />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/next_24"
            android:contentDescription="@string/next"
            android:layout_marginStart="8dp" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
